Add new apis for chart
